# rules_sass

./: .gitignore  CONTRIBUTING.md  README.md  WORKSPACE  defs.bzl  internal_deps.bzl  package.bzl
.bazelci/: presubmit.yml
.github/workflows/: release.yml  workspace_snippet.sh
e2e/npm_deps/: .bazelignore  BUILD.bazel  WORKSPACE  main.scss  mainwithdep.scss  package.json  pnpm-lock.yaml
e2e/workspace/: BUILD  WORKSPACE
sass/: BUILD  BUILD.bazel  defs.bzl  npm_sass_library.bzl  package.json  repositories.bzl  sass.bzl  sass_repositories.bzl  sass_wrapper.js  toolchain.bzl
sass/docs/: BUILD
sass/private/: BUILD.bazel  pathutil.bzl  sass_load_path.bzl  sass_load_path_test.bzl  toolchains_repo.bzl  versions.bzl
sass/test/npm_sass_library/: BUILD  test_assertions.bzl  test_fixture.scss
sass/test/npm_sass_library/test_external_pkg/: BUILD  _index.scss  _other_file.scss  sass_syntax.sass
sass/tests/: versions_test.bzl
