"""Provides a simple way to test your rules as an external workspace.
Add a basic smoke-test target below.
"""

load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@com_github_gonzojive_rules_sass//sass:defs.bzl", "sass_binary", "sass_library", "sass_load_path")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_bazel_lib//lib:directory_path.bzl", "directory_path")
load("@aspect_bazel_lib//lib:copy_file.bzl", "copy_file")

# Replace with a usage of your rule/macro
filegroup(name = "empty")

build_test(
    name = "smoke_test",
    targets = [
        # targets you add above
        ":hello_world_no_sourcemap",
        ":hello_world_sourcemap_embed_sources",
    ],
)

sass_binary(
    name = "hello_world_sourcemap_embed_sources",
    src = "main.scss",
    output_name = "main-sourcemap-embed-sources.css",
    sourcemap_embed_sources = True,
    deps = [
    ],
)

sass_binary(
    name = "hello_world_no_sourcemap",
    src = "main.scss",
    output_name = "main-no-sourcemap.css",
    sourcemap = False,
    deps = [
    ],
)

sass_binary(
    name = "mainwithdep",
    src = "mainwithdep.scss",
    output_name = "mainwithdep.css",
    sourcemap_embed_sources = True,
    deps = [
        #":corners",
        ":angular_material",
    ],
)

sass_library(
    name = "corners",
    srcs = ["mylib.scss"],
)

sass_load_path(
    name = "angular_material",
    directory = "//:node_modules/@angular/material/dir",
    import_path = "@ang/mat",
)

npm_link_all_packages(name = "node_modules")

directory_path(
    # A unique name for this target.
    name = "_index.scss_path",
    # a TreeArtifact (ctx.actions.declare_directory)
    directory = "//:node_modules/@angular/material/dir",
    # path relative to the directory
    path = "_index.scss",
)

copy_file(
    name = "index_file",
    src = "_index.scss_path",
    out = "_index.scss",
)
