load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(":sass_load_path_test.bzl", "create_load_path_directory_test_suite")

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//sass:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//sass:__subpackages__"],
)

bzl_library(
    name = "resolved_toolchain",
    srcs = ["resolved_toolchain.bzl"],
    visibility = ["//sass:__subpackages__"],
)

create_load_path_directory_test_suite(name = "create_load_path_directory_tests")
